test/libyul/yulSyntaxTests/objects/empty_object_name.yul
object "" {
}
// ----
// ParserError 3287: (7-9): Object name cannot be empty.
// ParserError 4846: (12-13): Expected keyword "code".
